@@ -4,83 +4,40 @@ import org.apache.jena.arq.querybuilder.SelectBuilder;
 import org.apache.jena.arq.querybuilder.WhereBuilder;
 import org.apache.jena.graph.Node;
 import org.apache.jena.sparql.core.Var;
+import org.apache.logging.log4j.LogManager;
 import org.json.JSONArray;
-import uk.ac.cam.cares.downsampling.Downsampling;
 import uk.ac.cam.cares.jps.agent.sensorloggermobileappagent.AgentConfig;
+import uk.ac.cam.cares.jps.agent.sensorloggermobileappagent.model.Payload;
+import uk.ac.cam.cares.jps.agent.sensorloggermobileappagent.model.SensorData;
 import uk.ac.cam.cares.jps.base.query.RemoteStoreClient;
-import uk.ac.cam.cares.jps.base.timeseries.TimeSeries;
 
-import java.time.OffsetDateTime;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
 
 import static uk.ac.cam.cares.jps.agent.sensorloggermobileappagent.OntoConstants.*;
 
-public class DBFSDataProcessor extends SensorDataProcessor {
-    private String dbfsIRI = null;
-    private final List<Double> dBFSList = new ArrayList<>();
+public class DBFSDataProcessor extends SensorDataDownsampledProcessor {
 
-    public DBFSDataProcessor(AgentConfig config, RemoteStoreClient storeClient, Node smartphoneNode) {
-        super(config, storeClient, smartphoneNode);
-        initIRIs();
+    private SensorData<Double> dBFS;
+
+    public DBFSDataProcessor(AgentConfig config, RemoteStoreClient ontopClient, RemoteStoreClient blazegraphClient, Node smartphoneNode) {
+        super("DBFS", config, ontopClient, blazegraphClient, smartphoneNode, config.getDbfsDSResolution(), config.getDbfsDSType());
+        logger = LogManager.getLogger(DBFSDataProcessor.class);
     }
 
     @Override
-    public void addData(HashMap<String, List<?>> data) {
-        timeList.addAll((List<OffsetDateTime>) data.get("dBFS_tsList"));
-        dBFSList.addAll((List<Double>) data.get("dBFSList"));
+    public void addData(Payload data) {
+        timeList.addAll(data.getdBFSTs());
+        dBFS.addData(data.getdBFSs());
     }
 
     @Override
-    public TimeSeries<Long> getProcessedTimeSeries() throws Exception {
-        List<String> dataIRIList = Collections.singletonList(dbfsIRI);
-        List<List<?>> valueList = Collections.singletonList(dBFSList);
-
-        TimeSeries<OffsetDateTime> ts = new TimeSeries<>(timeList, dataIRIList, valueList);
-        ts = Downsampling.downsampleTS(ts, config.getDbfsDSResolution(), config.getDbfsDSType());
-
-        List<Long> epochlist = ts.getTimes().stream().map(t -> t.toInstant().toEpochMilli())
-                .collect(Collectors.toList());
-
-        List<List<?>> downsampledValuesList = Arrays.asList(ts.getValuesAsDouble(dbfsIRI));
-
-        clearData();
-        return new TimeSeries<>(epochlist, dataIRIList, downsampledValuesList);
+    void initSensorData() {
+        dBFS = new SensorData<>(Double.class);
+        sensorData = List.of(dBFS);
     }
 
     @Override
-    public void initIRIs() {
-        if (dbfsIRI != null) {
-            // already instantiated in previous call
-            return;
-        }
-
-        getIrisFromKg();
-
-        if (dbfsIRI == null) {
-            isIriInstantiationNeeded = true;
-            isRbdInstantiationNeeded = true;
-        }
-    }
-
-    @Override
-    public List<Class<?>> getDataClass() {
-        return Collections.nCopies(getDataIRIs().size(), Double.class);
-    }
-
-    @Override
-    public List<String> getDataIRIs() {
-        return List.of(dbfsIRI);
-    }
-
-    @Override
-    void clearData() {
-        timeList.clear();
-        dBFSList.clear();
-    }
-
-    @Override
-    void getIrisFromKg() {
+    void getDataIrisFromKg() {
         Var varO = Var.alloc("o");
 
         WhereBuilder wb = new WhereBuilder()
@@ -98,7 +55,7 @@ public class DBFSDataProcessor extends SensorDataProcessor {
 
         JSONArray queryResult;
         try {
-            queryResult = storeClient.executeQuery(sb.buildString());
+            queryResult = ontopClient.executeQuery(sb.buildString());
         } catch (Exception e) {
             // ontop does not accept queries before any mapping is added
             return;
@@ -106,7 +63,7 @@ public class DBFSDataProcessor extends SensorDataProcessor {
         if (queryResult.isEmpty()) {
             return;
         }
-        dbfsIRI = queryResult.getJSONObject(0).optString("o");
+        dBFS.setDataIri(queryResult.getJSONObject(0).optString("o"));
     }
 
     @Override
